# fxc-intel-task

./: .gitignore  Dockerfile.consumer  Dockerfile.producer  README.md  connection.py  consumer.py  docker-compose.yml  main.py  pyproject.toml  util.py
