[tool.poetry]
name = "fxc-intel-task"
version = "0.1.0"
description = ""
authors = ["Denis Selimovic <selimovicdenis98@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pika = "^1.3.2"
redis = "^5.0.8"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
